# paperless-api

./: ++debug.py  .codecov.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE.md  MANIFEST.in  README.md  package-lock.json  package.json  poetry.toml  pyproject copy.toml  pyproject.toml  pyproject_old.toml  requirements.txt  requirements_dev.txt  setup.py  sonar-project.properties  test.py  wrangler.jsonc  zensical.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  labels.yml  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yaml  labels.yml  linting.yaml  linting.yml  lock.yml  pr-labels.yml  pre-commit-updater.yml  python-publish.yml  release-drafter.yml  release-package.yml  release.yml  stale.yml  test.yml  tests.yml  typing-linting.yml  typing.yml
docs/: 1_basic_usage.md  2_documents.md  3_custom_fields.md  4_permissions.md  CRUD.md  README.md  REQUEST.md  SESSION.md  documents.md  exceptions.md  index.md  migrating-v5-to-v6.md  permissions.md  quickstart.md  resources.md  session.md  usage.md
docs/concepts/: custom_field_query.md  custom_fields.md  documents.md  permissions.md  search_query.md
docs/javascripts/: counter.js
docs/resources/: bulk_edit_objects.md  config.md  correspondents.md  custom_fields.md  document_types.md  documents.md  groups.md  mail_accounts.md  mail_rules.md  processed_mail.md  profile.md  remote_version.md  saved_views.md  search.md  share_link_bundles.md  share_links.md  statistics.md  status.md  storage_paths.md  tags.md  tasks.md  trash.md  users.md  workflows.md
docs/stylesheets/: extra.css
example/: usage.py
paperless/: __init__.py  auth.py  model.py  paperless.py
pypaperless/: __init__.py  __main__.py  api.py  auth.py  cache.py  cli.py  client.py  const.py  dispatch.py  endpoints.py  errors.py  exceptions.py  helpers.py  model.py  pagination.py  paperless.py  runtime.py  services.py  sessions.py  settings.py  transport.py  util.py  utils.py
pypaperless/api/: __init__.py  base.py  default.py  documents.py  tasks.py
pypaperless/builders/: __init__.py  custom_fields.py  search.py
pypaperless/controllers/: __init__.py  base.py  default.py  documents.py  tasks.py
pypaperless/model/: __init__.py  base.py  documents.py  documents.pyi  helpers.py
pypaperless/models/: __init__.py  base.py  bulk_edit.py  classifiers.py  common.py  config.py  consumption_templates.py  correspondents.py  custom_field_query.py  custom_fields.py  document_history.py  document_notes.py  document_types.py  documents.py  documents.pyi  factories.py  filters.py  groups.py  iterators.py  mail_accounts.py  mail_rules.py  mails.py  matching.py  page.py  pages.py  permissions.py  profile.py  remote_version.py  result_page.py  saved_views.py  search.py  share_links.py  shared.py  statistics.py  status.py  storage_paths.py  tags.py  tasks.py  test.pyi  types.py  (+2 more)
pypaperless/services/: __init__.py  base.py  bulk_edit_objects.py  cache.py  config.py  correspondents.py  custom_fields.py  document_history.py  document_notes.py  document_share_links.py  document_types.py  documents.py  mails.py  permissions.py  profile.py  remote_version.py  saved_views.py  search.py  share_links.py  statistics.py  status.py  storage_paths.py  tags.py  tasks.py  trash.py  workflows.py
pypaperless/utils/: __init__.py  generators.py
script/: _dev_env.py  bootstrap  pngx_audit_coverage.py  pngx_fetch_schema.py  pngx_smoketest.py  ruff.toml  setup  test_paperless_1_17_0.py  test_paperless_1_8_0.py  test_paperless_2_0_0.py  test_paperless_2_3_0.py
src/pypaperless/: api.py  const.py  exceptions.py  helpers.py  sessions.py
tests/: __init__.py  conftest.py  const.py  mappings.py  ruff.toml  test_cli.py  test_client.py  test_common.py  test_custom_fields.py  test_dispatch.py  test_documents.py  test_exceptions.py  test_filters.py  test_models.py  test_models_matrix.py  test_models_specific.py  test_paperless_0_0_0.py  test_paperless_1_17_0.py  test_paperless_1_8_0.py  test_paperless_2_0_0.py  test_paperless_2_3_0.py  test_paperless_common.py  test_resources.py  test_search_builder.py  test_service_mixins.py  test_types.py
tests/api/: __init__.py  test_consumption_templates.py  test_correspondents.py  test_custom_fields.py  test_document_types.py  test_documents.py  test_general.py  test_groups.py  test_mail_accounts.py  test_mail_rules.py  test_saved_views.py  test_storage_paths.py  test_tags.py  test_tasks.py  test_users.py
tests/common/: test_crud_default.py  test_crud_documents.py  test_stuff.py
tests/controllers/: test_consumption_templates.py  test_correspondents.py  test_custom_fields.py  test_document_types.py  test_documents.py  test_groups.py  test_mail_accounts.py  test_mail_rules.py  test_saved_views.py  test_storage_paths.py  test_tags.py  test_tasks.py  test_users.py
tests/data/: __init__.py  api-schema_v2.15.0.json  bulk_edit_objects.py  config.py  correspondents.py  custom_fields.py  document_ai_suggestions.py  document_chat.py  document_history.py  document_metadata.py  document_notes.py  document_root.py  document_share_links.py  document_suggestions.py  document_types.py  document_version_info.py  documents.py  documents_bulk_edit.py  documents_search.py  groups.py  mail.py  mails.py  object_permissions.py  paths.py  profile.py  remote_version.py  saved_views.py  schema.json  search.py  share_link_bundles.py  share_links.py  statistics.py  status.py  storage_paths.py  tags.py  tasks.py  token.py  trash.py  users.py  v0_0_0.py  (+8 more)
tests/fixtures/: data.json
tests/functions/: test_list.py
tests/pypaperless/: test_consumption_templates.py  test_correspondents.py  test_custom_fields.py  test_document_types.py  test_documents.py  test_groups.py  test_mail_accounts.py  test_mail_rules.py  test_saved_views.py  test_storage_paths.py  test_tags.py  test_tasks.py  test_users.py
tests/util/: __init__.py  (+1 more)
(+130 files in other folders)
